# wm811k-defect-detection

./: .dockerignore  .gitattributes  .gitignore  .yamllint  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: default.yaml
configs/: default.yaml
docs/: IDEAS.md  data-flow.md
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_train.ipynb
src/wm811k/: __init__.py  config.py  data.py  engine.py  evaluate.py  gradcam.py  models.py  pipeline.py  quality.py  registry.py  seed.py  serve.py  train.py  validate.py  validation.py
tests/: conftest.py  test_config.py  test_data.py  test_models.py  test_serve.py  test_validation.py
