[project]
name = "wm811k-defect-detection"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "mlflow>=2.20",
    "numpy>=2.5.0",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=2.2,<3",
    "pandas-stubs>=2.2,<3",
    "pyarrow>=15,<20",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wm811k"]

[project.scripts]
wm811k-train = "wm811k.train:main"
wm811k-evaluate = "wm811k.evaluate:main"