[project]
name = "wm811k-defect-detection"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "mlflow>=2.20",
    "numpy>=2.5.0",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=2.2,<3",
    "pandas-stubs>=2.2,<3",
    "pandera>=0.32.1",
    "pyarrow>=23.0.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]


[project.optional-dependencies]
cpu = [
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]
cu126 = [
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]
[tool.uv]
conflicts = [
    [{ extra = "cpu" }, { extra = "cu126" }],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu126", extra = "cu126" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu126", extra = "cu126" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx2>=2.7.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "yamllint>=1.38.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wm811k"]

[project.scripts]
wm811k-train = "wm811k.train:main"
wm811k-evaluate = "wm811k.evaluate:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
